hotfix: /v1/authenticate endpoint returns status code 422
