# hasura-authenticationwebhook-rolemapping-service/src/models.py
@@ -10,7 +10,7 @@ from pydantic import BaseModel, Field
 
 
 class Headers(BaseModel):
-    Authorization: str = Field(
+    authorization: str = Field(
         ...,
         description="Standard HTTP Authorization header, Bearer schema, with JWT token",
         example="Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",  # noqa: E501
